[gd_scene load_steps=5 format=3 uid="uid://dl25a20543407"]

[ext_resource type="Script" path="res://enemy/shooty_bot.gd" id="1_7s2e8"]
[ext_resource type="PackedScene" uid="uid://c5qbwvl224ckh" path="res://ui/health_bar.tscn" id="2_ijwc2"]
[ext_resource type="Texture2D" uid="uid://dgj1cn07nl0u1" path="res://asset/1way.png" id="3_eiqf7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yiwj"]
size = Vector2(32, 32)

[node name="ShootyBot" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_7s2e8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2yiwj")

[node name="NavUpdateTimer" type="Timer" parent="."]
wait_time = 0.663
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.678431, 0.909804, 0.129412, 1)

[node name="HealthBar" parent="." instance=ExtResource("2_ijwc2")]

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Turrent" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Turrent"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="ProjectileSource" type="Node2D" parent="Turrent"]
position = Vector2(26, 0)

[node name="Sprite2D" type="Sprite2D" parent="Turrent"]
texture = ExtResource("3_eiqf7")

[connection signal="timeout" from="NavUpdateTimer" to="." method="_on_nav_update_timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
